ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: 192.168.64.155
    http:
      paths:
      - pathType: Prefix
        path: "/filezilla"
        backend:
          service:
            name: filezilla-lb
            port:
              number: 80
      - pathType: Prefix
        path: "/web"
        backend:
          service:
            name: nginx-lb
            port:
              number: 80
      - pathType: Prefix
        path: "/wordpress"
        backend:
          service:
            name: wordpress-lb
            port:
              number: 80
